[package]
name = "royalty-group"
version = "0.1.0"
authors = [
  "Shane Vitarana <shanev@users.noreply.github.com>",
  "Ethan Frey <ethanfrey@users.noreply.github.com>",
]
edition = "2018"
description = "Distribute royalties to a group"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0-beta" }
cw-controllers = "0.11.1"
cw-storage-plus = "0.11.1"
cw0 = "0.10.3"
cw2 = "0.11.1"
cw4 = "0.11.1"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta" }
