[package]
name = "sg-eth-aidrop"
version = "0.1.0"
authors = ["Michael Scotto <m@publicawesome.com>"]
edition = "2021"
description = "Stargaze Ethereum Airdrop"
license = "Apache-2.0"
repository = "https://github.com/public-awesome/launchpad"
homepage = "https://stargaze.zone"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.8
"""

[dependencies]
cosmwasm-crypto = "1.1.5"
cw-storage-plus = "0.15.0"
cw-utils = "0.15.0"
cw2 = "0.15.0"
rust_decimal = { version = "1.14.3" }
thiserror  = { workspace = true }
sg-whitelist = { path = "../whitelist", features = ["library"] }
sg1 = { path = "../../packages/sg1" }
hex = "0.4"
rlp = "0.5"
sha2 = "0.10"
sha3 = "0.10"
ethers-signers = "1.0.0"
ethers-core = "1.0.0"
eyre = "0.6"
futures = "0.3"
async-std = "1.12.0"

cosmwasm-storage = "1.1.4"
cosmwasm-schema = { workspace = true }
cosmwasm-std  = { workspace = true }
schemars      = { workspace = true }
serde         = { workspace = true }
sg-std        = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
sg-multi-test = { workspace = true }
cosmwasm-schema = { workspace = true }