[package]
name = "sg-eth-airdrop"
version = {workspace = true}
authors = ["Michael Scotto <m@publicawesome.com>"]
edition = "2021"
description = "Stargaze Ethereum Airdrop"
license = "Apache-2.0"
repository = "https://github.com/public-awesome/launchpad"
homepage = "https://stargaze.zone"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.8
"""

[dependencies]
cw-storage-plus = {workspace = true }
cw-utils = { workspace = true}
cw2 = {workspace = true }
rust_decimal = { version = "1.14.3" }
sg-whitelist = { workspace = true }
sg1 = { workspace = true}
sha2 = {workspace = true}
sha3 = "0.10"
hex = "0.4"

cosmwasm-schema = { workspace = true }

cosmwasm-std  = { workspace = true, features = ["staking"] }
schemars      = { workspace = true }
serde         = { workspace = true }
sg-std        = { workspace = true }
thiserror       = { workspace = true }
whitelist-generic = { git = "https://github.com/public-awesome/names.git",  rev = "91256f9ccfcec66fa8d4c2040acc9e10415c711a", features = ["library"] }
vending-minter  = { workspace = true, features = ["library"] }

[dev-dependencies]
async-std = "1.12.0"
ethers-signers = "1.0.0"
ethers-core = "1.0.0"
eyre = "0.6"
rlp = "0.5"
sg2             = { workspace = true }
vending-factory  = { workspace = true}
sg721-base  = { workspace = true }
cw-multi-test = { workspace = true }
sg-multi-test = { workspace = true }