[package]
name        = "sg-eth-airdrop"
authors     = ["Michael Scotto <m@publicawesome.com>"]
description = "Stargaze Ethereum Airdrop"
version     = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
repository  = { workspace = true }
license     = { workspace = true }

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema     = { workspace = true }
cosmwasm-std        = { workspace = true }
cw-storage-plus     = { workspace = true }
cw-utils            = { workspace = true }
cw2                 = { workspace = true }
ethereum-verify     = { workspace = true }
hex                 = "0.4"
rust_decimal        = { version = "1.14.3" }
sg-whitelist        = { workspace = true }
sg1                 = { workspace = true }
sha2                = { workspace = true }
sha3                = "0.10"
schemars            = { workspace = true }
serde               = { workspace = true }
sg-std              = { workspace = true }
thiserror           = { workspace = true }
vending-minter      = { workspace = true, features = ["library"] }
whitelist-immutable = { workspace = true, features = ["library"] }

[dev-dependencies]
async-std       = "1.12.0"
ethers-signers  = "1.0.0"
ethers-core     = "1.0.0"
eyre            = "0.6"
rlp             = "0.5"
sg2             = { workspace = true }
vending-factory = { workspace = true }
sg721-base      = { workspace = true }
cw-multi-test   = { workspace = true }
sg-multi-test   = { workspace = true }
anyhow          = "1.0.57"
