[package]
name = "sg721-base"
version = "0.13.0"
authors = ["Shane Vitarana <s@noreply.publicawesome.com>"]
edition = "2018"
description = "Stargaze NFT collection contract"
license = "Apache-2.0"
repository = "https://github.com/public-awesome/stargaze-contracts"
homepage = "https://stargaze.zone"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0" }
cosmwasm-storage = { version = "1.0.0" }
cw-storage-plus = "0.13.4"
cw-utils = "0.13.4"
cw2 = "0.13.4"
schemars = "0.8.8"
serde = { version = "1.0.133", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.30" }
sg-std =  { path = "../../packages/sg-std" }
url = "2.2.2"
cw721 = "0.13.2"
cw721-base = { version = "0.13.2", features = ["library"] }
sg721 = { path = "../../packages/sg721" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
cw-multi-test = "0.13.4"
sg-multi-test = { path = "../../packages/sg-multi-test" }
vending-minter = { path = "../vending-minter", features = ["library"] }
vending-factory = { path = "../vending-factory", features = ["library"] }
sg2 = { path = "../../packages/sg2" }
