[package]
name = "sg721-base"
version = "0.15.1"
authors = ["Shane Vitarana <s@noreply.publicawesome.com>"]
edition = "2018"
description = "Stargaze NFT collection contract"
license = "Apache-2.0"
repository = "https://github.com/public-awesome/launchpad"
homepage = "https://stargaze.zone"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "1.1.4" }
cosmwasm-std = { version = "1.1.4" }
cw-storage-plus = "0.15.0"
cw-utils = "0.15.0"
cw2 = "0.15.0"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.30" }
sg-std = { path = "../../packages/sg-std" }
url = "2.2.2"
cw721 = "0.15.0"
cw721-base = { version = "0.15.0", features = ["library"] }
sg721 = { path = "../../packages/sg721" }

[dev-dependencies]
cw-multi-test = "0.15.0"
sg-multi-test = { path = "../../packages/sg-multi-test" }
vending-minter = { path = "../vending-minter", features = ["library"] }
vending-factory = { path = "../vending-factory", features = ["library"] }
sg2 = { path = "../../packages/sg2" }
