[package]
authors = ["Shane Vitarana"]
edition = "2018"
name = "sg721-ics721"
version = "0.1.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.3
"""

[dependencies]
cosmwasm-std = {version = "1.0.0-beta", features = ["stargate"]}
cosmwasm-storage = {version = "1.0.0-beta"}
cw-storage-plus = "0.10"
cw0 = "0.10.3"
cw2 = "0.10"
cw20-ics20 = "0.10.3"
cw721 = {path = "../../packages/cw721"}
schemars = "0.8.3"
serde = {version = "1.0.127", default-features = false, features = ["derive"]}
thiserror = {version = "1.0.26"}

[dev-dependencies]
cosmwasm-schema = {version = "1.0.0-beta"}
