[package]
name = "sg721-metadata-onchain"
version = "0.14.0"
authors = [
  "Shane Vitarana <s@noreply.publicawesome.com>",
  "larry <gm@larry.engineer>",
]
edition = "2018"
description = "Example extending SG721 NFT to store metadata on chain"
license = "Apache-2.0"
repository = "https://github.com/public-awesome/launchpad"
homepage = "https://stargaze.zone"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.1.4" }
cw2 = "0.15.0"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
sg-metadata = { path = "../../packages/sg-metadata" }
sg-std = { path = "../../packages/sg-std" }
sg721 = { path = "../../packages/sg721" }
sg721-base = { path = "../sg721-base", features = ["library"] }

[dev-dependencies]
cosmwasm-schema = { version = "1.1.4" }
cw721 = "0.15.0"
cw721-base = { version = "0.15.0", features = ["library"] }
