[package]
name = "sg721-nt"
version = "0.14.0"
authors = [
  "Shane Vitarana <s@noreply.publicawesome.com>",
  "John Y <j@noreply.publicawesome.com>",
]
edition = "2018"
description = "Stargaze Non-transferrable NFT collection contract"
license = "Apache-2.0"
repository = "https://github.com/public-awesome/launchpad"
homepage = "https://stargaze.zone"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.1.4" }
cw-storage-plus = "0.15.0"
cw-utils = "0.15.0"
cw2 = "0.15.0"
schemars = "0.8.8"
serde = { version = "1.0.133", default-features = false, features = ["derive"] }
sg-std = { path = "../../packages/sg-std" }
cw721 = "0.15.0"
cw721-base = { version = "0.15.0", features = ["library"] }
sg721 = { path = "../../packages/sg721" }
sg721-base = { path = "../sg721-base", features = ["library"] }

[dev-dependencies]
cosmwasm-schema = { version = "1.1.4" }
