[package]
name = "sg721"
version = "0.10.0"
authors = ["Shane Vitarana <s@noreply.publicawesome.com>"]
edition = "2018"
description = "Stargaze NFT collection contract"
license = "Apache-2.0"
repository = "https://github.com/public-awesome/stargaze-contracts"
homepage = "https://stargaze.zone"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.3
"""

[dependencies]
cosmwasm-std = { version = "1.0.0-beta7" }
cosmwasm-storage = { version = "1.0.0-beta7" }
cw-storage-plus = "0.13.1"
cw-utils = "0.13.1"
cw2 = "0.13.1"
schemars = "0.8.8"
serde = { version = "1.0.133", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.30" }
sg-std = "0.10.0"
url = "2.2.2"
cw721 = "0.13.1"
cw721-base = { version = "0.13.1", features = ["library"] }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta7" }
