[package]
name = "sg-splits"
version = "0.1.0"
authors = ["Shane Vitarana <s@noreply.publicawesome.com>"]
edition = "2018"
description = "Stargaze Splits contract"
license = "Apache-2.0"
repository = "https://github.com/public-awesome/launchpad"
homepage = "https://stargaze.zone"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.8
"""

[dependencies]
cosmwasm-std = "1.1.4"
cosmwasm-storage = "1.1.4"
cw-storage-plus = "0.13.2"
cw2 = "0.13.2"
cw3-flex-multisig = { version = "0.14.0", features = ["library"] }
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
cw4 = "0.14.0"
cw3 = "0.14.0"
sg-std = { path = "../../packages/sg-std" }

[dev-dependencies]
cosmwasm-schema = "1.1.4"
cw-multi-test = "0.13.2"
cw4-group = "0.14.0"
sg-multi-test = { path = "../../packages/sg-multi-test" }
