[package]
name        = "vending-minter"
authors     = [
  "Jake Hartnell <jake@stargaze.zone>",
  "Shane Vitarana <s@noreply.publicawesome.com>",
]
description = "Stargaze vending minter contract"
version     = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
repository  = { workspace = true }
license     = { workspace = true }

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.8
"""

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw2             = { workspace = true }
cw4             = { workspace = true }
cw721           = { workspace = true }
cw721-base      = { workspace = true, features = ["library"] }
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
rand_core       = { version = "0.6.0", default-features = false }
rand_xoshiro    = { version = "0.6.0", default-features = false }
schemars        = { workspace = true }
serde           = { workspace = true }
sha2            = "0.10.2"
shuffle         = { git = "https://github.com/webmaster128/shuffle", branch = "rm-getrandom", version = "0.1.7" }
sg1             = { path = "../../packages/sg1" }
sg2             = { path = "../../packages/sg2" }
sg4             = { path = "../../packages/sg4" }
sg721           = { path = "../../packages/sg721" }
sg-std          = { path = "../../packages/sg-std"}
sg-whitelist    = { path = "../whitelist", features = ["library"] }
thiserror       = { workspace = true }
url             = { workspace = true }
vending-factory = { path = "../vending-factory", features = ["library"] }

[dev-dependencies]
cw-multi-test = { workspace = true }
sg-multi-test = { path = "../../packages/sg-multi-test" }
sg721-base    = { path = "../sg721-base" }
cw4-group     = { workspace = true }
sg-splits     = { path = "../splits" }
