[package]
name = "sg-whitelist"
version = "0.12.4"
authors = ["Shane Vitarana <s@noreply.publicawesome.com>"]
edition = "2018"
description = "Stargaze NFT whitelist contract"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.8
"""

[dependencies]
cosmwasm-std = { version = "1.1.4" }
cw-storage-plus = "0.15.0"
cw-utils = "0.15.0"
cw2 = "0.15.0"
schemars = "0.8"
rust_decimal = { version = "1.14.3" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
sg-std = { path = "../../packages/sg-std" }
sg1 = { path = "../../packages/sg1" }

[dev-dependencies]
cosmwasm-schema = { version = "1.1.4" }
