[package]
name = "sg721-metadata-onchain"
authors = [
  "Shane Vitarana <s@noreply.publicawesome.com>",
  "Larry Engineer <gm@larry.engineer>",
]
description = "Example extending SG721 NFT to store metadata on chain"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw2             = { workspace = true }
schemars        = { workspace = true }
serde           = { workspace = true }
sg721           = { workspace = true }
sg721-base      = { workspace = true, features = ["library"] }
sg-metadata     = { workspace = true }
sg-std          = { workspace = true }
cw-ownable      = { workspace = true }
cw721-base      = { workspace = true, features = ["library"] }

[dev-dependencies]
cw721 = { workspace = true }
