[package]
name        = "open-edition-factory"
authors     = ["Racoon Supply <racoon.supply.nft@gmail.com>"]
description = "Stargaze open edition minter factory contract"
version     = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
repository  = { workspace = true }
license     = { workspace = true }

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
base-factory    = { workspace = true, features = ["library"] }
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw2             = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
sg1             = { workspace = true }
sg2             = { workspace = true }
sg721           = { workspace = true }
sg-metadata     = { workspace = true }
sg-std          = { workspace = true }
thiserror       = { workspace = true }
